run-devops/k8s/shopping-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping-api
  template:
    metadata:
      labels:
        app: shopping-api
    spec:
      containers:
        - name: shopping-api
          image: aaftabali0001/shoppingapi:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
