run-devops/k8s/shopping-client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping-client
  template:
    metadata:
      labels:
        app: shopping-client
    spec:
      containers:
        - name: shopping-client
          image: aaftabali0001/shoppingclient:latest
          ports:
            - containerPort: 8080
