run-devops/k8s/shopping-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-api
spec:
  type: ClusterIP
  selector:
    app: shopping-api
  ports:
    - port: 80
      targetPort: 8080
