run-devops/k8s/shopping-client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopping-client
spec:
  type: ClusterIP
  selector:
    app: shopping-client
  ports:
    - port: 80
      targetPort: 8080
