run-devops/k8s/shoppingclient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingclient-deployment
  labels:
    app: shoppingclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingclient
  template:
    metadata:
      labels:
        app: shoppingclient
    spec:
      containers:
        - name: shoppingclient
          image: aaftabali0001/shoppingclient:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingclient-service
spec:
  type: NodePort
  selector:
    app: shoppingclient
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
      nodePort: 30000
